fix: date & ferris wheel overlap (#69)

--- a/src/components/home/hero/styles.module.scss
+++ b/src/components/home/hero/styles.module.scss
@@ -114,6 +114,7 @@
   .topHeader {
     position: absolute;
     width: 100%;
+    z-index: 2;
   }
 
   .ferrisWheelLarge {
